--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                  <h2>STYLES <br>CONFERENCE</h2>
              </div>
              <div class="box_b">
-                 <P>August 24-26th-chicago,L</P>
+                 <P>August 24-26th-chicago,lL</P>
                  <ul>
                     <li>
                         <a href="#">HOME</a> </li>
